# rect_graph_connector

./: .coveragerc  .gitignore  LICENSE  README.md  graph_output.csv  main.py  pyproject.toml  refactoring_plan.md  refactoring_plan_progress.md  refactoring_plan_progress_2.md  refactoring_plan_progress_3.md  refactoring_plan_progress_feedback.md  run_tests.sh  test.py
config/: colors.yaml  constants.yaml  dimensions.yaml  strings.yaml
language/: en.yaml  ja.yaml
src/rect_graph_connector/: __init__.py  config.py
src/rect_graph_connector/controllers/: __init__.py  input_handler.py  mode_controller.py
src/rect_graph_connector/controllers/modes/: __init__.py  edit_mode_controller.py  edit_mode_controller_part2.py  edit_mode_helpers.py  normal_mode_controller.py
src/rect_graph_connector/gui/: bridge_window.py  canvas.py  canvas_renderer.py  floating_menu.py  hover_helpers.py  import_dialog.py  main_window.py
src/rect_graph_connector/gui/context_menus/: __init__.py  edit_menu.py  normal_menu.py
src/rect_graph_connector/gui/rendering/: base_renderer.py  bridge_renderer.py  composite_renderer.py  edge_renderer.py  node_renderer.py  selection_renderer.py
src/rect_graph_connector/gui/rendering(deprecated)/: __init__.py  border_renderer.py  composite_renderer.py  grid_renderer.py  knife_renderer.py  node_renderer.py
src/rect_graph_connector/gui/sub_windows/: bridge_window.py  floating_menu.py  import_dialog.py
src/rect_graph_connector/models/: base_node.py  bridge_connector.py  connectivity.py  event.py  graph.py  hover_state_model.py  node.py  rect_node.py  selection_model.py  view_state_model.py
src/rect_graph_connector/models/special/: bridge_connection.py
src/rect_graph_connector/rendering/: __init__.py  canvas_view.py
src/rect_graph_connector/rendering/gui/: __init__.py  base_renderer.py  border_renderer.py  bridge_renderer.py  (+7 more)
src/rect_graph_connector/utils/: file_handler.py  geometry.py  logging_utils.py  naming_utils.py
src/test/: README.md  conftest.py
src/test/gui/: test_canvas.py
src/test/models/: test_connectivity.py  test_graph.py  test_node_shapes.py  test_rect_node.py
src/test/utils/: test_file_handler.py  test_geometry.py
(+20 files in other folders)
